# julia

./: .gitignore  .travis.yml  CMakeLists.txt  Make.inc  Makefile  appveyor.yml
base/: CMakeLists.txt  Makefile  client.jl  datafmt.jl  deprecated.jl  errno_h.jl.sh.in  exports.jl  functors.jl  inference.jl  interactiveutil.jl  managers.jl  mmap.jl  multi.jl  options.jl  pkg.jl  sharedarray.jl  show.jl  sparse.jl  string.jl  sysimg.jl
base/linalg/: generic.jl
base/pkg/: entry.jl  generate.jl  github.jl  query.jl  read.jl  reqs.jl  types.jl
base/sparse/: cholmod.jl  linalg.jl  spqr.jl  umfpack.jl
cmake/: CMakeVarMacros.cmake  JuliaCCompiler.cmake  JuliaCompilers.cmake  JuliaDeps.cmake  JuliaDirs.cmake  JuliaOptions.cmake  JuliaUtils.cmake  JuliaVersion.cmake  jl_custom_target.cmake
doc/: CMakeLists.txt  Makefile
doc/devdocs/: types.rst
doc/manual/: calling-c-and-fortran-code.rst  types.rst
doc/stdlib/: base.rst  io-network.rst
examples/: Makefile
src/: CMakeLists.txt  Makefile  ast.c  codegen.cpp  dump.c  gc.c  gf.c  init.c  julia-config.h.in  julia-syntax.scm  julia.h  options.h  toplevel.c
src/flisp/: CMakeLists.txt  Makefile
src/support/: CMakeLists.txt  Makefile
test/: Makefile  linalg2.jl  runtests.jl
test/perf/shootout/: Makefile
test/sparsedir/: cholmod.jl  sparse.jl  spqr.jl  umfpack.jl
ui/: CMakeLists.txt  Makefile  repl.c
